nodeapp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-deployment
  template:
    metadata:
      labels:
        app: server-deployment
    spec:
      containers:
        - name: server
          image: 112358ann/server
          imagePullPolicy: "Always"
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server-deployment
  ports:
    - port: 5001
      targetPort: 5001
