ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: myapp-test.com
      http:
        paths:
          - path: /node(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 5001
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
